--- a/app/src/main/res/layout/item_allphoto.xml
+++ b/app/src/main/res/layout/item_allphoto.xml
@@ -1,8 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:padding="@dimen/_5dp"
+    android:layout_height="wrap_content">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:layout_weight="1"
+    >
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="@string/title"
+        android:padding="@dimen/_5dp"
+        android:layout_centerInParent="true"
+        android:layout_toStartOf="@+id/ivPhoto"
+        android:textSize="@dimen/_18sp"
+        />
 
+    <ImageView
+        android:id="@+id/ivPhoto"
+        android:layout_width="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="end"
 
+        />
+
+</RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="@dimen/_5dp"
+        android:background="@android:color/darker_gray"/>
 </LinearLayout>
